--- a/EnergyTrade.csproj
+++ b/EnergyTrade.csproj
@@ -236,6 +236,7 @@
       <DependentUpon>202201091959250_CreatePost.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EnergyContext.cs" />
   </ItemGroup>
@@ -280,11 +281,13 @@
     <Content Include="Views\Market\Add.cshtml" />
     <Content Include="Views\Market\upload.cshtml" />
     <Content Include="Views\Market\MyItems.cshtml" />
+    <Content Include="Views\Market\Logout.cshtml" />
+    <Content Include="Views\Market\Item.cshtml" />
+    <Content Include="Views\Market\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="images\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
