--- a/EnergyTrade.csproj
+++ b/EnergyTrade.csproj
@@ -236,6 +236,7 @@
       <DependentUpon>202201091959250_CreatePost.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ProductWithUser.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EnergyContext.cs" />
