--- a/EnergyTrade.csproj
+++ b/EnergyTrade.csproj
@@ -215,8 +215,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ChatController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarketController.cs" />
+    <Compile Include="Controllers\TradeController.cs" />
     <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Entity\Brand.cs" />
     <Compile Include="Entity\EntityConfiguration\BrandConfiguration.cs" />
@@ -240,6 +242,7 @@
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EnergyContext.cs" />
+    <Compile Include="Services\HashService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -320,12 +323,14 @@
     <Content Include="Views\Market\MyItems.cshtml" />
     <Content Include="Views\Market\Logout.cshtml" />
     <Content Include="Views\Market\Item.cshtml" />
-    <Content Include="Views\Market\Profile.cshtml" />
+    <Content Include="Views\Market\UserProfile.cshtml" />
     <Content Include="Views\Market\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="images\" />
+    <Folder Include="Views\Chat\" />
+    <Folder Include="Views\Trade\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
