--- a/packages.config
+++ b/packages.config
@@ -41,6 +41,7 @@
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Linq.Dynamic" version="1.0.8" targetFramework="net472" />
   <package id="System.Memory" version="4.5.1" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
