--- a/packages.config
+++ b/packages.config
@@ -31,6 +31,7 @@
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Session" version="2.2.0" targetFramework="net472" />
