--- a/EnergyTrade.csproj
+++ b/EnergyTrade.csproj
@@ -358,6 +358,7 @@
     <Compile Include="Models\ProductWithUser.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\SimpleUser.cs" />
+    <Compile Include="Models\TradeAgent.cs" />
     <Compile Include="Models\UserConnection.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -499,6 +500,7 @@
     <Content Include="Views\Home\Settings.cshtml" />
     <Content Include="Views\Trade\Index.cshtml" />
     <Content Include="Views\Home\TemplateRender.cshtml" />
+    <Content Include="Views\Trade\TradeRequests.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
